responsiveness and scrollbar fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -196,42 +196,17 @@
   body {
     @apply bg-background text-foreground;
   }
+  
 }
 
-/* Custom scrollbar */
-/* ::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
+
 ::-webkit-scrollbar-thumb {
-  background-color: hsl(var(--sidebar-accent));
+  background-color: var(--base-200);
   border-radius: 4px;
-}
-::-webkit-scrollbar-track {
-  background-color: hsl(var(--sidebar-background));
-} */
-
-@layer components {
-  /* .tabs-trigger {
-    font-family: var(--font-manrope), sans-serif;
-  } */
+  border: 2px solid hsl(var(--sidebar-background, 241 20% 97%));
 }
 
-@layer utilities {
-  /* .font-primary {
-    font-family: var(--font-geist), sans-serif;
-    font-weight: 700;
-  }
-
-  .font-secondary {
-    font-family: var(--font-manrope), sans-serif;
-    font-weight: 500;
-  }
-
-   .text-primary {
-    color: #17A4FC;
-  }
-
-  .text-secondary {
-    color: #FACE49;
-  } */
-}
